# 17_MyList

./: ListDataConverter.cpp  ListDataConverter.h  ListNode.h  MyList.cpp  README.md  outlet.out  recovered_from_binary.txt  Консольный вывод проги.txt
CMake/: CMakeLists.txt  README.md
Google_Test/: ListDataConverterTest.cpp  main.cpp  output_Googlr_Test.txt
